# RiskLens

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yaml
docs/: RiskLens_Guide_RU.md  architecture.md  roadmap.md
scripts/: generate_playbook_pdf.py
sql/marts/: mart_daily_risk_summary.sql
sql/schema/: 001_core_entities.sql
sql/views/: vw_portfolio_exposure.sql
src/risklens/: __init__.py  __main__.py  cli.py  config.py
src/risklens/aggregation/: __init__.py
src/risklens/ingestion/: __init__.py
src/risklens/monitoring/: __init__.py
src/risklens/reporting/: __init__.py
src/risklens/risk/: __init__.py
src/risklens/scenarios/: __init__.py
tests/: test_smoke.py
